--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -173,8 +173,6 @@ services:
     container_name: stable-diffusion-webui-forge
     volumes:
       - ./stable-diffusion-models/models/checkpoints:/app/stable-diffusion-webui-forge/models/Stable-diffusion
-      - ./stable-diffusion-models/models/checkpoints/svd:/app/stable-diffusion-webui-forge/models/svd
-      - ./stable-diffusion-models/models/checkpoints/z123:/app/stable-diffusion-webui-forge/models/z123
       - ./stable-diffusion-models/models/clip_vision:/app/stable-diffusion-webui-forge/models/clip-interrogator
       - ./stable-diffusion-models/models/configs:/app/stable-diffusion-webui-forge/configs
       - ./stable-diffusion-models/models/controlnet:/app/stable-diffusion-webui-forge/models/ControlNet
@@ -193,6 +191,8 @@ services:
       - ./stable-diffusion-models/models/upscale_models/LDSR:/app/stable-diffusion-webui-forge/models/LDSR
       - ./stable-diffusion-models/models/vae:/app/stable-diffusion-webui-forge/models/VAE
       - ./stable-diffusion-models/models/vae_approx:/app/stable-diffusion-webui-forge/models/VAE-approx
+      - ./stable-video-diffusion-models/models:/app/stable-diffusion-webui-forge/models/svd
+      - ./stable-zero123-models/models/:/app/stable-diffusion-webui-forge/models/z123
       - ./workspace/stable-diffusion-webui-forge/extensions:/app/stable-diffusion-webui-forge/extensions
       - ./workspace/stable-diffusion-webui-forge/webui-user.sh:/app/stable-diffusion-webui-forge/webui-user.sh
       - ./workspace/stable-diffusion-webui-forge/config.json:/app/stable-diffusion-webui-forge/config.json
@@ -292,6 +292,24 @@ services:
       args:
         OMOST_COMMIT: 731e74922fc6be91171688574d07624f93d3b658
         BASE_IMAGE: *BASE_IMAGE
+  stable-audio-tools:
+    <<: *base_service
+    image: bean980310/stable-audio-tools:latest
+    container_name: stable-audio-tools
+    volumes:
+      - ./stable-audio-models/models:/app/stable-audio-tools/models
+      - ~/.cache/huggingface:/app/invokeai/.cache/huggingface
+    ports:
+      - "3090:7860"
+    build:
+      context: ./build/stable-audio-tools
+      dockerfile: Dockerfile
+      args:
+        STABLE_AUDIO_TOOLS_COMMIT: 7311840dc3ffb69c9134f83483daa1402ec452e3
+        BASE_IMAGE: *BASE_IMAGE
+    environment:
+      - GRADIO_SERVER_NAME="0.0.0.0"
+      - GRADIO_SERVER_PORT="7860"
 
 volumes:
   fooocus-data:
