--- a/docker-compose.download.yml
+++ b/docker-compose.download.yml
@@ -8,7 +8,7 @@ services:
       context: ./stable-diffusion-models
       dockerfile: Dockerfile
       args:
-        BASE_IMAGE: bean980310/ubuntu-docker:1.0.2-cuda12.1.1-torch2.3.1
+        BASE_IMAGE: &BASE_IMAGE bean980310/ubuntu-docker:1.0.3-cuda12.1.1-torch2.3.1
   # download_img2video_model:
   #   image: svd-model-download:latest
   #   container_name: download_img2video_model
@@ -18,7 +18,7 @@ services:
   #     context: ./stable-video-diffusion-models
   #     dockerfile: Dockerfile
   #     args:
-  #       BASE_IMAGE: bean980310/ubuntu-docker:1.0.2-cuda12.1.1-torch2.3.1
+  #       BASE_IMAGE: *BASE_IMAGE
   # download_txt23d_model:
   #   image: svd-model-download:latest
   #   container_name: download_txt23d_model
@@ -28,4 +28,4 @@ services:
   #     context: ./stable-zero123-models
   #     dockerfile: Dockerfile
   #     args:
-  #       BASE_IMAGE: bean980310/ubuntu-docker:1.0.2-cuda12.1.1-torch2.3.1
+  #       BASE_IMAGE: *BASE_IMAGE
