--- a/docker-compose.pull.yml
+++ b/docker-compose.pull.yml
@@ -59,6 +59,7 @@ services:
       - ./stable-diffusion-models/models/upscale_models/LDSR:/app/stable-diffusion-webui/models/LDSR
       - &vae ./stable-diffusion-models/models/vae:/app/stable-diffusion-webui/models/VAE
       - ./stable-diffusion-models/models/vae_approx:/app/stable-diffusion-webui/models/VAE-approx
+      - ./workspace/stable-diffusion-webui/.cache/huggingface:/app/stable-diffusion-webui/.cache/huggingface
       - ./workspace/stable-diffusion-webui/extensions:/app/stable-diffusion-webui/extensions
       - ./workspace/stable-diffusion-webui/webui-user.sh:/app/stable-diffusion-webui/webui-user.sh
       - ./workspace/stable-diffusion-webui/config.json:/app/stable-diffusion-webui/config.json
@@ -67,12 +68,15 @@ services:
     ports:
       - "3010:7860"
     pull_policy: if_not_present
+    environment:
+      - HF_HOME=/app/stable-diffusion-webui/.cache/huggingface
   kohya_ss:
     <<: *base_service
     image: bean980310/kohya-ss:latest
     container_name: kohya_ss
     volumes:
       - ./stable-diffusion-models/models:/app/kohya_ss/models
+      - ./workspace/kohya_ss/.cache/huggingface:/app/kohya_ss/.cache/huggingface
       - ./workspace/kohya_ss/dataset:/app/kohya_ss/dataset
       - ./workspace/kohya_ss/dataset/images:/app/kohya_ss/dataset/images
       - ./workspace/kohya_ss/dataset/logs:/app/kohya_ss/dataset/logs
@@ -82,6 +86,8 @@ services:
     ports:
       - "3020:7860"
     pull_policy: if_not_present
+    environment:
+      - HF_HOME=/app/kohya_ss/.cache/huggingface
   comfyui:
     <<: *base_service
     image: bean980310/comfyui:latest
@@ -109,12 +115,15 @@ services:
       - ./stable-diffusion-models/models/ultralytics:/app/ComfyUI/models/ultralytics
       - ./stable-diffusion-models/models/unet:/app/ComfyUI/models/unet
       - ./stable-diffusion-models/models/vae_approx:/app/ComfyUI/models/vae_approx
+      - ./workspace/ComfyUI/.cache/huggingface:/app/ComfyUI/.cache/huggingface
       - ./workspace/ComfyUI/custom_nodes:/app/ComfyUI/custom_nodes
       - ./workspace/ComfyUI/extra_model_paths.yaml:/app/ComfyUI/extra_model_paths.yaml
       - ./outputs/ComfyUI:/app/ComfyUI/output
     ports:
       - "3030:8188"
     pull_policy: if_not_present
+    environment:
+      - HF_HOME=/app/ComfyUI/.cache/huggingface
   invokeai:
     <<: *base_service
     image: bean980310/invokeai:latest
@@ -125,14 +134,16 @@ services:
         target: /app/InvokeAI
         bind:
           create_host_path: true
-      - ~/.cache/huggingface:/app/invokeai/.cache/huggingface
       - ./stable-diffusion-models/models:/app/InvokeAI/models
+      - ./workspace/InvokeAI/.cache/huggingface:/app/InvokeAI/.cache/huggingface
       - ./workspace/InvokeAI/custom_nodes:/app/InvokeAI/custom_nodes
       - ./workspace/InvokeAI/invokeai.yaml:/app/InvokeAI/invokeai.yaml
       - ./outputs/InvokeAI:/app/InvokeAI/outputs
     ports:
       - "9090:9090"
     pull_policy: if_not_present
+    environment:
+      - HF_HOME=/app/InvokeAI/.cache/huggingface
   fooocus:
     <<: *base_service
     image: bean980310/fooocus:latest
@@ -157,12 +168,14 @@ services:
       - ./stable-diffusion-models/models/upscale_models:/app/Fooocus/models/upscale_models
       - ./stable-diffusion-models/models/vae:/app/Fooocus/models/vae
       - ./stable-diffusion-models/models/vae_approx:/app/Fooocus/models/vae_approx
+      - ./workspace/Fooocus/.cache/huggingface:/app/Fooocus/.cache/huggingface
       - ./workspace/Fooocus/config.txt:/app/Fooocus/config.txt
       - ./outputs/Fooocus:/app/Fooocus/outputs
     ports:
       - "3040:7860"
     pull_policy: if_not_present
-    # environment:
+    environment:
+      - HF_HOME=/app/Fooocus/.cache/huggingface
     #   - PRESET=anime
     #   - PRESET=realistic
   stable-diffusion-webui-forge:
@@ -191,6 +204,7 @@ services:
       - ./stable-diffusion-models/models/vae_approx:/app/stable-diffusion-webui-forge/models/VAE-approx
       - ./stable-video-diffusion-models/models:/app/stable-diffusion-webui-forge/models/svd
       - ./stable-zero123-models/models/:/app/stable-diffusion-webui-forge/models/z123
+      - ./workspace/stable-diffusion-webui-forge/.cache/huggingface:/app/stable-diffusion-webui-forge/.cache/huggingface
       - ./workspace/stable-diffusion-webui-forge/extensions:/app/stable-diffusion-webui-forge/extensions
       - ./workspace/stable-diffusion-webui-forge/webui-user.sh:/app/stable-diffusion-webui-forge/webui-user.sh
       - ./workspace/stable-diffusion-webui-forge/config.json:/app/stable-diffusion-webui-forge/config.json
@@ -199,6 +213,8 @@ services:
     ports:
       - "3050:7860"
     pull_policy: if_not_present
+    environment:
+      - HF_HOME=/app/stable-diffusion-webui-forge/.cache/huggingface
   sdnext:
     <<: *base_service
     image: bean980310/sdnext:latest
@@ -207,6 +223,7 @@ services:
       - ./stable-diffusion-models/models:/app/automatic/models
       - ./stable-diffusion-models/models/configs:/app/automatic/configs
       - ./stable-diffusion-models/models/vae_approx:/app/automatic/models/VAE-approx
+      - ./workspace/SD.Next/.cache/huggingface:/app/automatic/.cache/huggingface
       - ./workspace/SD.Next/extensions:/app/automatic/extensions
       - ./workspace/SD.Next/config.json:/app/automatic/config.json
       - ./workspace/SD.Next/ui-config.json:/app/automatic/ui-config.json
@@ -214,6 +231,8 @@ services:
     ports:
       - "3060:7860"
     pull_policy: if_not_present
+    environment:
+      - HF_HOME=/app/automatic/.cache/huggingface
   easy-diffusion:
     <<: *base_service
     image: bean980310/easy-diffusion:latest
@@ -222,11 +241,14 @@ services:
       - ./stable-diffusion-models/models:/app/easy-diffusion/models
       - ./stable-diffusion-models/models/ckeckpoints:/app/easy-diffusion/models/stable-diffusion
       - ./stable-diffusion-models/models/loras:/app/easy-diffusion/models/lora
+      - ./workspace/easy-diffusion/.cache/huggingface:/app/easy-diffusion/.cache/huggingface
       - ./workspace/easy-diffusion/config.yaml:/app/easy-diffusion/scripts/config.yaml
       - ./outputs/easy-diffusion:/app/easy-diffusion/outputs
     ports:
       - "9000:9000"
     pull_policy: if_not_present
+    environment:
+      - HF_HOME=/app/easy-diffusion/.cache/huggingface
   swarmui:
     <<: *base_service
     image: bean980310/swarmui:latest
@@ -235,30 +257,53 @@ services:
       - swarmdata:/app/SwarmUI/Data
       - swarmbackend:/app/SwarmUI/dlbackend
       - ./stable-diffusion-models/models:/app/SwarmUI/Models
+      - ./workspace/SwarmUI/.cache/huggingface:/app/SwarmUI/.cache/huggingface
       - ./outputs/SwarmUI:/app/SwarmUI/Output
     ports:
       - "7801:7801"
     pull_policy: if_not_present
+    environment:
+      - HF_HOME=/app/SwarmUI/.cache/huggingface
+      - SWARM_NO_VENV='true'
   facefusion:
     <<: *base_service
     image: bean980310/facefusion:latest
     container_name: facefusion
     volumes:
       - ./workspace/facefusion/.assets:/app/facefusion/.assets
+      - ./workspace/facefusion/.cache/huggingface:/app/facefusion/.cache/huggingface
     ports:
       - "3070:7860"
     pull_policy: if_not_present
     environment:
+      - HF_HOME=/app/facefusion/.cache/huggingface
       - GRADIO_SERVER_NAME=0.0.0.0
+      - GRADIO_SERVER_PORT=7860
   omost:
     <<: *base_service
     image: bean980310/omost:latest
     container_name: omost
     volumes:
-      - ~/.cache/huggingface/hub:/data
+      - ./workspace/Omost/.cache/huggingface/hub:/app/Omost/.cache/huggingface
     ports:
       - "3080:8080"
     pull_policy: if_not_present
+    environment:
+      - HF_HOME=/app/Omost/.cache/huggingface
+  stable-audio-tools:
+    <<: *base_service
+    image: bean980310/stable-audio-tools:latest
+    container_name: stable-audio-tools
+    volumes:
+      - ./stable-audio-models/models:/app/stable-audio-tools/models
+      - ./workspace/stable-audio-models/.cache/huggingface:/app/stable-audio-models/.cache/huggingface
+    ports:
+      - "3090:7860"
+    pull_policy: if_not_present
+    environment:
+      - HF_HOME=/app/stable-audio-models/.cache/huggingface
+      - GRADIO_SERVER_NAME=0.0.0.0
+      - GRADIO_SERVER_PORT=7860
 
 volumes:
   ollama:
