--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       context: ./build/a1111-sdwebui
       dockerfile: Dockerfile
       args:
-        WEBUI_VERSION: &WEBUI_VERSION v1.9.4
+        WEBUI_VERSION: &WEBUI_VERSION v1.10.0
         BASE_IMAGE: &BASE_IMAGE bean980310/ubuntu-docker:1.0.4-cuda12.5.1-torch2.4.0
     environment:
       - HF_HOME=/app/stable-diffusion-webui/.cache/huggingface
@@ -70,7 +70,7 @@ services:
       context: ./build/kohya_ss
       dockerfile: Dockerfile
       args:
-        KOHYA_VERSION: v24.1.4
+        KOHYA_VERSION: v24.1.5
         BASE_IMAGE: *BASE_IMAGE
     environment:
       - HF_HOME=/app/kohya_ss/.cache/huggingface
@@ -111,7 +111,7 @@ services:
       context: ./build/comfyui
       dockerfile: Dockerfile
       args:
-        COMFYUI_VERSION: &COMFYUI_VERSION v0.0.1
+        COMFYUI_VERSION: &COMFYUI_VERSION v0.0.3
         WEBUI_VERSION: *WEBUI_VERSION
         BASE_IMAGE: *BASE_IMAGE
     environment:
@@ -137,7 +137,7 @@ services:
       context: ./build/invokeai
       dockerfile: Dockerfile
       args:
-        INVOKEAI_VERSION: v4.2.4
+        INVOKEAI_VERSION: v4.2.7
         BASE_IMAGE: *BASE_IMAGE
     environment:
       - HF_HOME=/app/InvokeAI/.cache/huggingface
@@ -174,7 +174,7 @@ services:
       context: ./build/fooocus
       dockerfile: Dockerfile
       args:
-        FOOOCUS_VERSION: v2.4.3
+        FOOOCUS_VERSION: v2.5.2
         BASE_IMAGE: *BASE_IMAGE
     environment:
       - HF_HOME=/app/Fooocus/.cache/huggingface
@@ -218,7 +218,49 @@ services:
       context: ./build/sdwebui-forge
       dockerfile: Dockerfile
       args:
-        FORGE_COMMIT: bfee03d8d9415a925616f40ede030fe7a51cbcfd
+        FORGE_VERSION: 2f87f123b2415e9bb3bb091758fb6e8f5b776caa
+        BASE_IMAGE: *BASE_IMAGE
+    environment:
+      - HF_HOME=/app/stable-diffusion-webui-forge/.cache/huggingface
+  stable-diffusion-webui-forge-legacy:
+    <<: *base_service
+    image: bean980310/stable-diffusion-webui-forge:legacy
+    container_name: stable-diffusion-webui-forge
+    volumes:
+      - ./stable-diffusion-models/models/checkpoints:/app/stable-diffusion-webui-forge/models/Stable-diffusion
+      - ./stable-diffusion-models/models/clip_vision:/app/stable-diffusion-webui-forge/models/clip-interrogator
+      - ./stable-diffusion-models/models/configs:/app/stable-diffusion-webui-forge/configs
+      - ./stable-diffusion-models/models/controlnet:/app/stable-diffusion-webui-forge/models/ControlNet
+      - ./stable-diffusion-models/models/deepbooru:/app/stable-diffusion-webui-forge/models/deepbooru
+      - ./stable-diffusion-models/models/embeddings:/app/stable-diffusion-webui-forge/embeddings
+      - ./stable-diffusion-models/models/facerestore_models/Codeformer:/app/stable-diffusion-webui-forge/models/Codeformer
+      - ./stable-diffusion-models/models/facerestore_models/GFPGAN:/app/stable-diffusion-webui-forge/models/GFPGAN
+      - ./stable-diffusion-models/models/hypernetworks:/app/stable-diffusion-webui-forge/models/hypernetworks
+      - ./stable-diffusion-models/models/karlo:/app/stable-diffusion-webui-forge/models/karlo
+      - ./stable-diffusion-models/models/loras:/app/stable-diffusion-webui-forge/models/Lora
+      - ./stable-diffusion-models/models/sams:/app/stable-diffusion-webui-forge/models/sam
+      - ./stable-diffusion-models/models/ultralytics:/app/stable-diffusion-webui-forge/models/adetailer
+      - ./stable-diffusion-models/models/upscale_models/ESRGAN:/app/stable-diffusion-webui-forge/models/ESRGAN
+      - ./stable-diffusion-models/models/upscale_models/RealESRGAN:/app/stable-diffusion-webui-forge/models/RealESRGAN
+      - ./stable-diffusion-models/models/upscale_models/SwinIR:/app/stable-diffusion-webui-forge/models/SwinIR
+      - ./stable-diffusion-models/models/upscale_models/LDSR:/app/stable-diffusion-webui-forge/models/LDSR
+      - ./stable-diffusion-models/models/vae:/app/stable-diffusion-webui-forge/models/VAE
+      - ./stable-diffusion-models/models/vae_approx:/app/stable-diffusion-webui-forge/models/VAE-approx
+      - ./stable-video-diffusion-models/models:/app/stable-diffusion-webui-forge/models/svd
+      - ./stable-zero123-models/models/:/app/stable-diffusion-webui-forge/models/z123
+      - ./workspace/stable-diffusion-webui-forge/.cache/huggingface:/app/stable-diffusion-webui-forge/.cache/huggingface
+      - ./workspace/stable-diffusion-webui-forge/extensions:/app/stable-diffusion-webui-forge/extensions
+      - ./workspace/stable-diffusion-webui-forge/webui-user.sh:/app/stable-diffusion-webui-forge/webui-user.sh
+      - ./workspace/stable-diffusion-webui-forge/config.json:/app/stable-diffusion-webui-forge/config.json
+      - ./workspace/stable-diffusion-webui-forge/ui-config.json:/app/stable-diffusion-webui-forge/ui-config.json
+      - ./outputs/stable-diffusion-webui-forge:/app/stable-diffusion-webui-forge/outputs
+    ports:
+      - "3051:7860"
+    build:
+      context: ./build/sdwebui-forge
+      dockerfile: Dockerfile
+      args:
+        FORGE_VERSION: previous
         BASE_IMAGE: *BASE_IMAGE
     environment:
       - HF_HOME=/app/stable-diffusion-webui-forge/.cache/huggingface
@@ -241,7 +283,7 @@ services:
       context: ./build/vladmandic-sdnext
       dockerfile: Dockerfile
       args:
-        SDNEXT_COMMIT: 2ec6e9eec481223b8abe50cb5165d5fd9be2d086
+        SDNEXT_COMMIT: a874b27e50a343ac55148756a0a80eafb3a7f87f
         BASE_IMAGE: *BASE_IMAGE
     environment:
       - HF_HOME=/app/automatic/.cache/huggingface
@@ -262,7 +304,7 @@ services:
       context: ./build/easy-diffusion
       dockerfile: Dockerfile
       args:
-        EASYDIFF_VERSION: v3.0.2
+        EASYDIFF_VERSION: v3.0.7
         BASE_IMAGE: *BASE_IMAGE
     environment:
       - HF_HOME=/app/easy-diffusion/.cache/huggingface
