--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,6 +138,9 @@ services:
       args:
         INVOKEAI_VERSION: v4.2.7
         BASE_IMAGE: *BASE_IMAGE
+        TORCH_VERSION: 2.4.0
+        INDEX_URL: https://download.pytorch.org/whl/cu124
+        XFORMERS_VERSION: 0.0.27.post2
     environment:
       - HF_HOME=/app/InvokeAI/.cache/huggingface
   fooocus:
